--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "express_auth",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"start": "node ./bin/www"
 	},
@@ -12,6 +13,7 @@
 		"dotenv": "^16.4.1",
 		"express": "^4.18.2",
 		"http-errors": "~1.6.3",
+		"joi": "^17.12.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.1",
 		"morgan": "~1.9.1",
